--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.4",
     "lodash": "^4.17.21",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
